isl-rs/src/union_set.rs

use crate::*;

extern "C" {
  pub fn isl_union_set_dim(uset: UnionSetRef, type_: DimType) -> c_uint;
  pub fn isl_union_set_from_basic_set(bset: BasicSet) -> Option<UnionSet>;
  pub fn isl_union_set_from_set(set: Set) -> Option<UnionSet>;
  pub fn isl_union_set_empty(space: Space) -> Option<UnionSet>;
  pub fn isl_union_set_copy(uset: UnionSetRef) -> Option<UnionSet>;
  pub fn isl_union_set_free(uset: UnionSet) -> *mut c_void;
  pub fn isl_union_set_get_ctx(uset: UnionSetRef) -> Option<CtxRef>;
  pub fn isl_union_set_get_space(uset: UnionSetRef) -> Option<Space>;
  pub fn isl_union_set_reset_user(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_universe(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_params(uset: UnionSet) -> Option<Set>;
  pub fn isl_union_set_detect_equalities(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_affine_hull(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_polyhedral_hull(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_remove_redundancies(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_simple_hull(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_coalesce(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_compute_divs(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_lexmin(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_lexmax(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_add_set(uset: UnionSet, set: Set) -> Option<UnionSet>;
  pub fn isl_union_set_union(uset1: UnionSet, uset2: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_subtract(uset1: UnionSet, uset2: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_intersect(uset1: UnionSet, uset2: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_intersect_params(uset: UnionSet, set: Set) -> Option<UnionSet>;
  pub fn isl_union_set_product(uset1: UnionSet, uset2: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_gist(uset: UnionSet, context: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_gist_params(uset: UnionSet, set: Set) -> Option<UnionSet>;
  pub fn isl_union_set_apply(uset: UnionSet, umap: UnionMap) -> Option<UnionSet>;
  pub fn isl_union_set_preimage_multi_aff(uset: UnionSet, ma: MultiAff) -> Option<UnionSet>;
  pub fn isl_union_set_preimage_pw_multi_aff(uset: UnionSet, pma: PwMultiAff) -> Option<UnionSet>;
  pub fn isl_union_set_preimage_union_pw_multi_aff(uset: UnionSet, upma: UnionPwMultiAff) -> Option<UnionSet>;
  pub fn isl_union_set_project_out(uset: UnionSet, type_: DimType, first: c_uint, n: c_uint) -> Option<UnionSet>;
  pub fn isl_union_set_remove_divs(bset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_is_params(uset: UnionSetRef) -> Bool;
  pub fn isl_union_set_is_empty(uset: UnionSetRef) -> Bool;
  pub fn isl_union_set_is_subset(uset1: UnionSetRef, uset2: UnionSetRef) -> Bool;
  pub fn isl_union_set_is_equal(uset1: UnionSetRef, uset2: UnionSetRef) -> Bool;
  pub fn isl_union_set_is_disjoint(uset1: UnionSetRef, uset2: UnionSetRef) -> Bool;
  pub fn isl_union_set_is_strict_subset(uset1: UnionSetRef, uset2: UnionSetRef) -> Bool;
  pub fn isl_union_set_get_hash(uset: UnionSetRef) -> c_uint;
  pub fn isl_union_set_n_set(uset: UnionSetRef) -> c_int;
  pub fn isl_union_set_foreach_set(uset: UnionSetRef, fn_: unsafe extern "C" fn(set: Set, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_union_set_get_basic_set_list(uset: UnionSetRef) -> Option<BasicSetList>;
  pub fn isl_union_set_contains(uset: UnionSetRef, space: SpaceRef) -> Bool;
  pub fn isl_union_set_extract_set(uset: UnionSetRef, dim: Space) -> Option<Set>;
  pub fn isl_set_from_union_set(uset: UnionSet) -> Option<Set>;
  pub fn isl_union_set_foreach_point(uset: UnionSetRef, fn_: unsafe extern "C" fn(pnt: Point, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_union_set_sample(uset: UnionSet) -> Option<BasicSet>;
  pub fn isl_union_set_sample_point(uset: UnionSet) -> Option<Point>;
  pub fn isl_union_set_from_point(pnt: Point) -> Option<UnionSet>;
  pub fn isl_union_set_lift(uset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_lex_lt_union_set(uset1: UnionSet, uset2: UnionSet) -> Option<UnionMap>;
  pub fn isl_union_set_lex_le_union_set(uset1: UnionSet, uset2: UnionSet) -> Option<UnionMap>;
  pub fn isl_union_set_lex_gt_union_set(uset1: UnionSet, uset2: UnionSet) -> Option<UnionMap>;
  pub fn isl_union_set_lex_ge_union_set(uset1: UnionSet, uset2: UnionSet) -> Option<UnionMap>;
  pub fn isl_union_set_coefficients(bset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_solutions(bset: UnionSet) -> Option<UnionSet>;
  pub fn isl_union_set_read_from_file(ctx: CtxRef, input: *mut FILE) -> Option<UnionSet>;
  pub fn isl_union_set_read_from_str(ctx: CtxRef, str: CStr) -> Option<UnionSet>;
  pub fn isl_union_set_to_str(uset: UnionSetRef) -> Option<CString>;
  pub fn isl_printer_print_union_set(p: Printer, uset: UnionSetRef) -> Option<Printer>;
  pub fn isl_union_set_dump(uset: UnionSetRef) -> ();
  pub fn isl_union_set_list_get_ctx(list: UnionSetListRef) -> Option<CtxRef>;
  pub fn isl_union_set_list_from_union_set(el: UnionSet) -> Option<UnionSetList>;
  pub fn isl_union_set_list_alloc(ctx: CtxRef, n: c_int) -> Option<UnionSetList>;
  pub fn isl_union_set_list_copy(list: UnionSetListRef) -> Option<UnionSetList>;
  pub fn isl_union_set_list_free(list: UnionSetList) -> *mut c_void;
  pub fn isl_union_set_list_add(list: UnionSetList, el: UnionSet) -> Option<UnionSetList>;
  pub fn isl_union_set_list_insert(list: UnionSetList, pos: c_uint, el: UnionSet) -> Option<UnionSetList>;
  pub fn isl_union_set_list_drop(list: UnionSetList, first: c_uint, n: c_uint) -> Option<UnionSetList>;
  pub fn isl_union_set_list_concat(list1: UnionSetList, list2: UnionSetList) -> Option<UnionSetList>;
  pub fn isl_union_set_list_n_union_set(list: UnionSetListRef) -> c_int;
  pub fn isl_union_set_list_get_union_set(list: UnionSetListRef, index: c_int) -> Option<UnionSet>;
  pub fn isl_union_set_list_set_union_set(list: UnionSetList, index: c_int, el: UnionSet) -> Option<UnionSetList>;
  pub fn isl_union_set_list_foreach(list: UnionSetListRef, fn_: unsafe extern "C" fn(el: UnionSet, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_union_set_list_map(list: UnionSetList, fn_: unsafe extern "C" fn(el: UnionSet, user: *mut c_void) -> Option<UnionSet>, user: *mut c_void) -> Option<UnionSetList>;
  pub fn isl_union_set_list_sort(list: UnionSetList, cmp: unsafe extern "C" fn(a: UnionSetRef, b: UnionSetRef, user: *mut c_void) -> c_int, user: *mut c_void) -> Option<UnionSetList>;
  pub fn isl_union_set_list_foreach_scc(list: UnionSetListRef, follows: unsafe extern "C" fn(a: UnionSetRef, b: UnionSetRef, user: *mut c_void) -> Bool, follows_user: *mut c_void, fn_: unsafe extern "C" fn(scc: UnionSetList, user: *mut c_void) -> Stat, fn_user: *mut c_void) -> Stat;
  pub fn isl_printer_print_union_set_list(p: Printer, list: UnionSetListRef) -> Option<Printer>;
  pub fn isl_union_set_list_dump(list: UnionSetListRef) -> ();
  pub fn isl_union_set_list_union(list: UnionSetList) -> Option<UnionSet>;
}

impl BasicSet {
  #[inline(always)]
  pub fn union_set_from_basic_set(self) -> Option<UnionSet> {
    unsafe {
      let ret = isl_union_set_from_basic_set(self.to());
      (ret).to()
    }
  }
}

impl CtxRef {
  #[inline(always)]
  pub fn union_set_read_from_file(self, input: *mut FILE) -> Option<UnionSet> {
    unsafe {
      let ret = isl_union_set_read_from_file(self.to(), input.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn union_set_read_from_str(self, str: CStr) -> Option<UnionSet> {
    unsafe {
      let ret = isl_union_set_read_from_str(self.to(), str.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn union_set_list_alloc(self, n: c_int) -> Option<UnionSetList> {
    unsafe {
      let ret = isl_union_set_list_alloc(self.to(), n.to());
      (ret).to()
    }
  }
}

impl Point {
  #[inline(always)]
  pub fn union_set_from_point(self) -> Option<UnionSet> {
    unsafe {
      let ret = isl_union_set_from_point(self.to());
      (ret).to()
    }
  }
}

impl Printer {
  #[inline(always)]
  pub fn print_union_set(self, uset: UnionSetRef) -> Option<Printer> {
    unsafe {
      let ret = isl_printer_print_union_set(self.to(), uset.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn print_union_set_list(self, list: UnionSetListRef) -> Option<Printer> {
    unsafe {
      let ret = isl_printer_print_union_set_list(self.to(), list.to());
      (ret).to()
    }
  }
}

impl Set {
  #[inline(always)]
  pub fn union_set_from_set(self) -> Option<UnionSet> {
    unsafe {
      let ret = isl_union_set_from_set(self.to());
      (ret).to()
    }
  }
}

impl Space {
  #[inline(always)]
  pub fn union_set_empty(self) -> Option<UnionSet> {
    unsafe {
      let ret = isl_union_set_empty(self.to());
      (ret).to()
    }
  }
}
